# NEO_STEM

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MANIFEST.in  README.md  app.json  install-armbian.sh  package-lock.json  package.json  pyproject.toml
app/: _layout.tsx
app/(tabs)/: _layout.tsx  home.tsx  learn.tsx  progress.tsx
app/lesson/: [lessonId].tsx
app/quiz/: [lessonId].tsx
neostem_cli/: __init__.py  cli.py
src/: main.cpp
src/activities/q10_magnet/: Q10Magnet.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q11_bicycle/: Q11Bicycle.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q12_leaf_color/: Q12LeafColor.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q13_light_bulb/: Q13LightBulb.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q14_rust/: Q14Rust.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q15_fish_gills/: Q15FishGills.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q16_soda_fizz/: Q16SodaFizz.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q17_ice_cream/: Q17IceCream.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q18_helium_balloon/: Q18HeliumBalloon.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q19_firefly/: Q19Firefly.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q1_rice_cooker/: Q1RiceCooker.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q20_water_xylophone/: Q20WaterXylophone.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q2_dalat_fog/: Q2DalatFog.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q3_mangrove/: Q3Mangrove.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q4_ice_glass/: Q4IceGlass.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q5_sea_salt/: Q5SeaSalt.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q6_rainbow/: Q6Rainbow.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q7_moon_phases/: Q7MoonPhases.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q8_drum_sound/: Q8DrumSound.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/activities/q9_electric_fan/: Q9ElectricFan.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml
src/components/: QuestionCard.tsx
src/core/: ActivityBase.qml  BadgeSystem.qml  DQBItem.qml  DragItem.qml  DrivingQuestionBoard.qml  DropZone.qml  InvestigationBase.qml  ModelBuilder.qml  NeoAudio.qml  NeoBar.qml  NeoBonus.qml  NeoConstants.qml  NeoScore.qml  ParticleEffects.qml  PhenomenonViewer.qml  ProblematizeChallenge.qml  ProgressTracker.qml  SliderControl.qml  ThermometerWidget.qml  TouchButton.qml
src/core/js/: badgeManager.js  progressManager.js
src/data/: lessons.ts
src/menu/: MainMenu.qml  ProfileScreen.qml  QuestionSelector.qml  SettingsScreen.qml  StepSelector.qml
src/store/: useGameStore.ts
src/theme/: colors.ts
translations/: neostem_en.ts  neostem_vi.ts
